2016-04-29 Magnus Hagdorn
 * piccolo-client.py: add option to try downloading spectra
 * piccolo2/client/PiccoloXbeeClient.py: handle incoming spectra specially by
   caching the spectra and checking for new commands after each chunk has been
   received

2016-04-28 Magnus Hagdorn
 * piccolo2/client/PiccoloXbeeClient.py: move xbee communication into a separate
   thread

2016-04-27 Magnus Hagdorn
 * piccolo-client.py: add logging
 * piccolo2/client/PiccoloXbeeClient.py: use new block read/write xbee methods

2016-04-27 Magnus Hagdorn
 * piccolo-client.py: add option to use xbee client
 * piccolo2/client/__init__.py: import xbee client
 * piccolo2/client/PiccoloXbeeClient.py: first go at implementing xbee client

2016-04-06 Magnus Hagdorn
 * README.md: updated
 * setup.py: add metadata

2016-04-06 Magnus Hagdorn
 * started ChangeLog
 * use setuptools
 * piccolo2/client/__init__.py: rename module to import
 * piccolo-client.py: ditto