@@ -1,4 +1,9 @@
 2016-04-29 Magnus Hagdorn
+ * piccolo-client.py: tidy up
+ * piccolo2/client/PiccoloBaseClient.py: always return a SpectraList object
+   when the getSpectra command is called
+
+2016-04-29 Magnus Hagdorn
  * piccolo-client.py: add option to try downloading spectra
  * piccolo2/client/PiccoloXbeeClient.py: handle incoming spectra specially by
    caching the spectra and checking for new commands after each chunk has been
